--- a/.gitmodules
+++ b/.gitmodules
@@ -2,5 +2,5 @@
     path = external/protocol
     url = https://github.com/Blizzard/s2client-proto.git
 [submodule "external/protobuf"]
-    path = contrib/protobuf
-    url = https://github.com/google/protobuf
+	path = external/protobuf
+	url = https://github.com/google/protobuf
