added previous iteration functionality:
* Grid & GridUtils
* UnitQuery
* Footprint

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,26 +11,40 @@ if (CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL 19.12.25835)
 endif()
 
 set(SC2PP_SOURCES 
-    Actions.cpp
-    Converters.cpp
-    Converters.h
-    SC2Client.cpp
-    SC2IDs.h
-    SC2Session.cpp
-    SC2Session.h
-    TestAgent.h
-    TestAgent.cpp
-    UnitPool.h
     ../include/sc2pp/Actions.h
     ../include/sc2pp/Agent.h
+    ../include/sc2pp/Common.h
+    ../include/sc2pp/Observation.h
     ../include/sc2pp/SC2Client.h
     ../include/sc2pp/SC2Context.h
+    Actions.cpp
+    Agent.cpp
+    Converters.cpp
+    Converters.h
+    Observation.cpp
+    SC2Client.cpp
+    SC2Context.cpp
+    SC2Session.cpp
+    SC2Session.h
+    TestAgent.cpp
+    TestAgent.h
+    UnitPool.h
     main.cpp
+
+    utils/GridView.cpp
+
+    ../include/sc2pp/utils/Footprints.h
+    ../include/sc2pp/utils/Grid.h
+    ../include/sc2pp/utils/GridUtils.h
+    ../include/sc2pp/utils/GridView.h
+    ../include/sc2pp/utils/GridView.hpp
+    ../include/sc2pp/utils/UnitQuery.h
+    ../include/sc2pp/utils/UnitTraits.h
 )
 
 add_executable(sc2pp ${SC2PP_SOURCES} ${PROTO_SRCS} ${PROTO_HDRS})
 
-target_include_directories(sc2pp PRIVATE ${Boost_INCLUDE_DIRS} PUBLIC "../include")
+target_include_directories(sc2pp PRIVATE "." "../include/sc2pp" "../include/sc2pp/utils" ${Boost_INCLUDE_DIRS} PUBLIC "../include")
 target_compile_features(sc2pp PRIVATE cxx_std_20)
 #include_directories( ${Boost_INCLUDE_DIRS} )
 target_link_libraries(sc2pp PUBLIC sc2proto PRIVATE Boost::filesystem)
