split into sc2pp/test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ cmake_minimum_required(VERSION 3.10)
 project(sc2pp VERSION 0.0.1 LANGUAGES CXX)
 
 add_subdirectory(src)
+add_subdirectory(test)
 add_subdirectory(external)
